public/css/introHCI.css
@import url(//fonts.googleapis.com/css?family=Work+Sans);
body {
    background: #fff;
    font-family: Work Sans;
}

h1 {
    text-align: center;
    font-family: inherit;
    margin: 40px;
}

h2 {
    font-family: inherit;
    font-size: 20px;
}

a:link {
    text-decoration: none;
}

ul.topnav {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #282C33;
}

#logo {
    width: 130px;
}

ul.topnav li {
    float: left;
}

ul.topnav li a {
    display: block;
    color: #fff;
    text-align: center;
    padding: 12px 16px;
    text-decoration: none;
    transition: 0.3s;
    font-size: 16px;
}

ul.topnav li.right {
    float: right;
    top: 10px;
}

.btn {
    width: 500px;
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    background: none;
    cursor: pointer;
    padding: 25px 80px;
    display: block;
    margin: 25px auto;
    letter-spacing: 1px;
    text-transform: uppercase;
    font-weight: 500;
    outline: none;
    position: relative;
    border-radius: 0px;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
}

.btn:after {
    content: '';
    position: absolute;
    z-index: -1;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
}

.btn-1 {
    background: #00BCD4;
    color: #fff;
}

.btn-1:hover {
    background: #26C6DA;
    color: #fff;
}

.btn-1:active {
    background: #00ACC1;
    top: 2px;
    color: #fff;
}

.btn-1:before {
    position: absolute;
    height: 100%;
    left: 0;
    top: 0;
    line-height: 3;
    font-size: 140%;
    width: 60px;
}

.btn-1e {
    padding: 25px 120px 25px 60px;
    overflow: hidden;
}

.btn-1e:before {
    left: auto;
    right: 10px;
    z-index: 2;
}

.btn-1e:after {
    width: 30%;
    height: 200%;
    background: rgba(255, 255, 255, 0.1);
    z-index: 1;
    right: 0;
    top: 0;
    margin: -5px 0 0 -5px;
    -webkit-transform-origin: 0 0;
    -webkit-transform: rotate(-20deg);
    -moz-transform-origin: 0 0;
    -moz-transform: rotate(-20deg);
    -ms-transform-origin: 0 0;
    -ms-transform: rotate(-20deg);
    transform-origin: 0 0;
    transform: rotate(-20deg);
}

.btn-1e:hover:after {
    width: 40%;
}

.icon-weight:before {
    content: url(/img/weightlifting.png);
}

.icon-calendar:before {
    content: url(/img/calendar.png);
}

.icon-star:before {
    content: url(/img/star.png);
}

.icon-notepad:before {
    content: url(/img/notepad.png);
}

.icon-home:before {
    content: url(/img/home.png);
}

#handle {
    position: absolute;
    margin: 10px 10px 10px 0;
    top: 0;
    right: 0;
}

#login {
    position: absolute;
    margin: 10px 10px 10px 10px;
    top: 0;
    left: 0;
}

.mainOption {
    width: 500px;
    padding: 20px 40px;
    margin: 25px auto;
    box-shadow: 1px 2px 3px gray;
    text-align: center;
    border: 1px solid gray;
    border-radius: 3px;
    display: block;
}

.mainOption img {
    margin-left: 25px;
}

.secPage {
    padding: 35px 10px;
}

#objects {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    justify-content: flex-start;
    -webkit-align-items: flex-end;
    position: absolute;
    bottom: 0;
}

.mainOption:hover {
    box-shadow: 2px 2px 7px gray;
    font-style: bold;
}

#homeElem {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 40px;
    height: 40px;
    border: 0px solid gray;
    border-radius: 50%;
    background-color: #00BCD4;
    margin: 0 0 30px 30px;
    text-align: center;
}

#homeElem img {
    margin-top: 5px;
}

.jumbotron p {
    color: #6e6e6e;
}

.bodyMap {
    width: 300px;
    height: 600px;
    position: absolute;
    margin-left: 25%;
    padding-bottom: 20px;
}

.workoutOptions {
    margin-left: 0;
    margin-top: 70px;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex-flow: column wrap;
    align-items: flex-start;
    justify-content: flex-end;
    -webkit-align-items: flex-start;
    position: relative;
}

.workoutLeft {
    left: 60px;
}

.workoutRight {
    align-self: flex-end;
    right: 90px;
}

.workoutOptions li {
    border-radius: 4px 4px 4px 4px;
    padding: 5px 7px;
    width: 80px;
    background: #00BCD4;
    display: inline;
    border: solid #e0faff 1px;
    margin-top: 20px;
    margin-left: 0;
    position: relative;
    text-align: center;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
}

.workoutLeft:hover {
    background: #26C6DA;
    margin-left: 8px;
}

.workoutRight:hover {
    background: #26C6DA;
    margin-right: 8px;
}

.workoutOptions li:active {
    background: #00ACC1;
    top: 2px;
}

.workoutOptions li a {
    font-family: inherit;
    font-size: 12px;
    color: white;
}

.fullBod a {
    font-size: 16px;
    font-weight: bold;
    height: 80px;
    width: 80px;
    text-align: center;
}

.tabBar {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex-flow: row;
    align-items: center;
    justify-content: space-around;
    -webkit-align-items: left;
    width: 100%;
    position: fixed;
    bottom: 0;
    padding: 3px 20px 3px 7px;
    background-color: #e3eff0;
    box-shadow: 2px 2px 4px gray;
    border-top: solid #a6a6a6 1px;
}

.tabBar a {
    margin: 0;
    padding: 5px 4px 3px 0px;
    display: inline-block;
    text-decoration: none;
    color: #26C6DA;
}

.tabItem {
    text-align: center;
    width: 90px;
    padding: 0 5px 0 5px;
    font-size: 12px;
}

.tabBar img {
    width: 20px;
}

.botnav {
    list-style: none;
    position: fixed;
    bottom: 0;
    width: 100%;
    margin: 0;
    padding: 0;
    text-align: center;
    overflow: hidden;
    background-color: #fff;
}

ul.botnav li {
    display: inline-block;
    margin: auto;
}

ul.botnav li a {
    display: block;
    color: #333;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    transition: 0.3s;
    font-size: 10px;
    margin: auto;
}

ul.botnav li a:hover {
    background-color: #00BCD4;
    color: #fff;
}

ul.botnav img {
    width: 10px;
}

a.active {
    background-color: #00BCD4;
    color: #fff;
}


/* Calendar code inspiration found on w3Schools. */

.month {
    padding: 40px 25px;
    width: 100%;
    background: #26C6DA;
}


/* Month list */

.month ul {
    margin: 0;
    padding: 0;
}

.month ul li {
    color: white;
    font-size: 22px;
    text-transform: uppercase;
    letter-spacing: 3px;
}


/* Weekdays (Mon-Sun) */

.weekdays {
    margin: 0;
    padding: 20px 0;
    background-color: #ddd;
}

.weekdays li {
    display: inline-block;
    width: 13%;
    color: #666;
    text-align: center;
}


/* Days (1-31) */

.days {
    padding: 15px 0;
    background: #eee;
    margin: 0;
}

.days li {
    list-style-type: none;
    display: inline-block;
    width: 13.6%;
    text-align: center;
    margin-bottom: 5px;
    font-size: 12px;
    color: #777;
}


/* Highlight the "current" day */

.days li .active {
    padding: 5px;
    background: #26C6DA;
    color: white !important
}

.videoContainer {
    margin: 20px auto;
}

@media (max-width: 550px) {
    .btn {
        width: 350px;
    }
    .bodyMap {
        height: 450px;
        width: 200px;
    }
    h1 {
        font-size: 25px;
    }
    .workoutLeft {
        left: -18px;
        margin-top: 5px;
    }
    .workoutRight {
        right: -5px;
    }
    .workoutOptions li {
        margin-top: 10px;
        width: 75px;
    }
    .videoContainer iframe {
        width: 375px;
    }
}

@media (max-width: 349px) {
    .btn {
        width: 300px;
    }
    .bodyMap {
        height: 350px;
        width: 150px;
    }
}

textarea {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

